# quickjs-regex-rs

./: .gitignore  Cargo.toml  Dockerfile.c2rust  bench-results.txt  check_strategy.rs  deploy.sh  full-rebar-benchmark.csv  quickjs-vs-rust-regex-full.csv  run-rebar.sh  rust-regex-benchmark.csv  test_issues.rs
.cargo/: config.toml
.github/workflows/: bench.yml
benches/: ab_test.rs  comparison.rs  engine_comparison.rs  full_comparison.rs  interleaved_comparison.rs  profile_simple.rs
examples/: check_api.rs  check_noseyparker_lits.rs  debug_ac_options.rs  debug_alternation.rs  debug_alternation_large.rs  debug_ci_nested.rs  debug_date.rs  debug_many_matches.rs  debug_monster.rs  debug_nested.rs  debug_quantifier.rs  debug_sherlock.rs  debug_specific.rs  debug_strategy.rs  debug_strategy_selection.rs  rebar_mimic.rs  test_count_matches.rs  test_date_fix.rs  test_date_structure.rs  test_full_date.rs  test_real_date.rs
rebar-engine/: Cargo.toml  main.rs
scripts/: add_quickjs.sh  build-remote.sh  remote_build.txt  run_rebar.sh  safety_analyze.rs  safety_report.sh
src/: lib.rs
src/regex/: bitvm.rs  engine.rs  error.rs  flags.rs  interpreter.rs  mod.rs  opcodes.rs  pikevm.rs  selective.rs  unicode.rs  util.rs
src/regex/compiler/: bytecode_builder.rs  codegen.rs  mod.rs  parser.rs
tests/: bench_date.rs  bench_ru.rs  comparison.rs  count_bugs.rs  find_iter_bug.rs  mismatch_check.rs  new_patterns.rs  nosey_full.rs  nosey_prefilter.rs  smoke.rs  strategy_check.rs  suffix_bug.rs  test262.rs  test_flyio.rs  unicode_word.rs
