[package]
name = "quickjs-regex"
version = "0.1.0"
edition = "2021"
description = "JavaScript-compatible regex engine translated from QuickJS"
license = "MIT"
keywords = ["regex", "javascript", "ecmascript"]
categories = ["text-processing"]

[dependencies]
# Legacy C engine modules (only used for benchmark comparison via find_at_c_engine)
c2rust-bitfields = "0.21"
libc = "0.2"
# Search optimization
memchr = "2"
aho-corasick = "1"

[dev-dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
